# Forge

./: PRD.md  package-lock.json  package.json
.cargo/: config.toml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs
src/components/launcher/: WorkspaceLauncher.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/limits/: AddAccountModal.tsx  AgentLimitsPanel.tsx
src/components/memory/: MemoryApp.tsx  MemoryGraph.tsx
src/components/panels/: AgentTasksPanel.tsx  BrowserPanel.tsx  FilesPanel.tsx  GitPanel.tsx
src/components/settings/: SettingsModal.tsx
src/components/workspace/: PaneGrid.tsx  TabBar.tsx  TerminalPane.tsx  WorkspaceToolbar.tsx  WorkspaceView.tsx
src/lib/: sounds.ts  utils.ts
src/store/: accountStore.ts  memoryStore.ts  themeStore.ts  workspaceStore.ts
src/styles/: globals.css
src/types/: accounts.ts  index.ts  memory.ts
